--- a/src/css/signIn/main.css
+++ b/src/css/signIn/main.css
@@ -1,13 +1,19 @@
 .formSignIn {
     width: 480px;
-    height: 500px;
+    height: 100%;
     background: linear-gradient(180deg, #65E2DC 0%, #38C4BD 100%);
     border-radius: 10px;
     padding-top: 54px;
     padding-left: 40px;
     padding-right: 40px;
+    padding-bottom: 45px;
     margin-top: 6%;
-    margin-bottom: 18%;;
+    margin-bottom: 18%;
+}
+
+.formSignIn:hover button {
+    background: radial-gradient(100% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), #000000;
+    color: white;
 }
 
 .formSignIn input {
