--- a/src/css/signIn/main.css
+++ b/src/css/signIn/main.css
@@ -1,3 +1,11 @@
+.signInBlock {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 9%;
+}
+
+
 .formSignIn {
     width: 480px;
     height: 100%;
@@ -7,7 +15,6 @@
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 45px;
-    margin-top: 6%;
     margin-bottom: 18%;
 }
 
@@ -22,4 +29,8 @@
 
 .noRegistaration {
     margin-top: 30px;
+}
+
+.blockWithImage img {
+    margin-left: 25%;
 }
