added user courses

--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -38,7 +38,7 @@
 }
 
 .buttonRate:hover {
-    background:  #38C4BD;
+    background-color: transparent;
     color: #000000;
     border: 1px solid #000000;
 }
