--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -68,3 +68,17 @@
     border: 0px;
     font-weight: 600;
 }
+
+.add {
+    border: 1px solid #000000;
+    border-radius: 10px;
+    background-color: transparent;
+    width: 180px;
+    height: 50px;
+    color: #4A4A4A;
+}
+
+.add:hover {
+    background-color: black;
+    color: white;
+}
