--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -50,6 +50,11 @@
     width: 48px;
 }
 
+.socialButton:hover {
+    background: black;
+    color: white;
+}
+
 .profileButton {
     border-radius: 50%;
     background: white;
