--- a/src/css/userLesson/homework.css
+++ b/src/css/userLesson/homework.css
@@ -47,3 +47,8 @@
     margin-top: 35%;
     margin-left: 5%;
 }
+
+.formHomework form:hover button{
+    background: radial-gradient(100% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), #000000;
+    color: white;
+}
