--- a/src/css/userLesson/main.css
+++ b/src/css/userLesson/main.css
@@ -33,3 +33,12 @@
     width: 50%;
     font-size: 24px;
 }
+
+.headLessson p {
+    font-size: 24px;
+}
+
+.headLessson {
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
