--- a/src/css/userLesson/main.css
+++ b/src/css/userLesson/main.css
@@ -34,11 +34,11 @@
     font-size: 24px;
 }
 
-.headLessson p {
+.headLesson p {
     font-size: 24px;
 }
 
-.headLessson {
+.headLesson {
     margin-top: 5%;
     margin-bottom: 5%;
 }
