--- a/src/css/courses/main.css
+++ b/src/css/courses/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Montserrat";
-    src: url('../../../fonts/static/Montserrat-Regular.ttf');
+    src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
 }
 
 * {
@@ -34,6 +34,10 @@
 
 .iconHeadCourseComputer {
     height: 90%;
+}
+
+#enter {
+    color: black;
 }
 
 @media (min-width: 992px) {
@@ -80,5 +84,11 @@
 @media (max-width: 767px) {
     .iconHeadCourseMobile {
         width: 100%;
+    }
+}
+
+@media (min-width: 992px) {
+    #enter {
+        display: none;
     }
 }
