--- a/src/css/mainPage/main.css
+++ b/src/css/mainPage/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Montserrat";
-    src: url('../../../fonts/static/Montserrat-Regular.ttf');
+    src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
 }
 
 * {
@@ -84,6 +84,16 @@
 
 .textAbout h1{
     margin-bottom: 5%;
+}
+
+#enter {
+    color: black;
+}
+
+@media (min-width: 992px) {
+    #enter {
+        display: none;
+    }
 }
 
 
@@ -176,7 +186,7 @@
     .textInPic {
         top: 0;
         margin-bottom: 10%;
-        width: inherit;
+        width: 70%;
     }
 
     .coupleOfProps {
