--- a/src/css/mainPage/news.css
+++ b/src/css/mainPage/news.css
@@ -3,12 +3,11 @@
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
 }
 
-.cardsOfNews {
-    display: flex;
-    flex-direction: row;
-    gap: 5%;
-    justify-content: center;
+#carouselNews {
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
+
 
 .card-body a {
     color: #000000;
