--- a/src/css/news/main.css
+++ b/src/css/news/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Montserrat";
-    src: url('../../../fonts/static/Montserrat-Regular.ttf');
+    src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
 }
 
 * {
@@ -29,4 +29,10 @@
 
 .textNews h1 {
     margin-bottom: 3%;
+}
+
+@media (min-width: 992px) {
+    #enter {
+        display: none;
+    }
 }
