--- a/src/css/personalAccount/main.css
+++ b/src/css/personalAccount/main.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
+}
+
+* {
+    font-family: Montserrat;
+}
+
 .personalAccountBody {
     display: flex;
     flex-direction: row;
