--- a/src/css/courses/main.css
+++ b/src/css/courses/main.css
@@ -13,10 +13,7 @@
     background: #F4F4F4;
     border-radius: 20px;
     justify-content: space-between;
-    padding-top: 5%;
-    padding-left: 3%;
-    padding-right: 3%;
-    padding-bottom: 5%;
+    padding: 5% 3% 5% 3%;
     height: 500px;
     margin-bottom:  5%;
 }
