--- a/src/css/personalAccount/main.css
+++ b/src/css/personalAccount/main.css
@@ -18,10 +18,7 @@
 .list-group {
     box-shadow: 0px 0px 40px 1px #F0F0F0;
     height: 100%;
-    padding-top: 1%;
-    padding-left: 0.5%;
-    padding-right: 0.5%;
-    padding-bottom: 1%;
+    padding: 1% 0.5% 1% 0.5%;
     border-radius: 10px;
 }
 
@@ -46,8 +43,5 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 40px #F0F0F0;
     border-radius: 10px;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-left: 10%;
-    padding-right: 5%;
+    padding: 5% 5% 5% 10%;
 }
