--- a/src/css/signIn/main.css
+++ b/src/css/signIn/main.css
@@ -11,10 +11,7 @@
     height: 100%;
     background: linear-gradient(180deg, #65E2DC 0%, #38C4BD 100%);
     border-radius: 10px;
-    padding-top: 54px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 45px;
+    padding: 54px 40px 45px 40px;
     margin-bottom: 18%;
 }
 
