--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -41,7 +41,7 @@
     font-size: 20px
 }
 
-.carousel-indicators {
+#carouselFeedback .carousel-indicators {
     right: 60%;
     bottom: 5%;
 }
@@ -65,12 +65,21 @@
     }
 }
 
+@media (max-width: 991px) {
+    .carousel-indicators button {
+        background: #C0C0C0;
+        width: 15px !important;
+        height: 15px !important;
+        border-radius: 50%;
+    }
+}
+
 @media (max-width: 767px) {
     .bodyFeedbackImg {
         display: none;
     }
 
-    .carousel-control-prev {
+    #carouselFeedback .carousel-control-prev {
         display: none;
     }
 
@@ -78,13 +87,6 @@
         position: relative;
         top: -50px;
         left: 80%;
-    }
-
-    .carousel-indicators button {
-        background: #C0C0C0;
-        width: 15px !important;
-        height: 15px !important;
-        border-radius: 50%;
     }
 
     .bodyFeedback {
@@ -101,7 +103,7 @@
 }
 
 @media (min-width: 768px) {
-    .carousel-indicators {
+    #carouselFeedback .carousel-indicators {
         display: none;
     }
 
