changed fonts h1 and fixed carouel

--- a/src/css/courses/main.css
+++ b/src/css/courses/main.css
@@ -3,6 +3,11 @@
     src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
 }
 
+@font-face {
+    font-family: "Montserrat-Bold";
+    src: url('../../../fonts/fonts/Montserrat-Bold.ttf');
+}
+
 * {
     font-family: Montserrat;
 }
