--- a/src/css/mainPage/news.css
+++ b/src/css/mainPage/news.css
@@ -1,3 +1,5 @@
+
+
 .card {
     background: linear-gradient(180deg, #D9D9D9 45.62%, #38C4BD 100%);
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
@@ -7,7 +9,9 @@
     margin-top: 5%;
 }
 
-
+#news h1 {
+    font-family: Montserrat-Bold;
+}
 
 .card-body a {
     color: #000000;
