--- a/src/css/userCoursePage/modules.css
+++ b/src/css/userCoursePage/modules.css
@@ -9,13 +9,13 @@
     margin-bottom:  5%;
 }
 
-.textModule {
+.text-module {
     font-size: 20px;
     width: 70%;
     margin-top: 60px;
     margin-bottom: 60px;
 }
 
-.modulePicture img{
+.module-picture img{
     width: 400px;
 }
