--- a/src/css/mainPage/news.css
+++ b/src/css/mainPage/news.css
@@ -23,7 +23,7 @@
 }
 
 @media (max-width: 991px) {
-    .carouselNewsContainer {
+    .carousel-news-container {
         width: 20rem;
     }
     #carouselNews .carousel-control-next,
@@ -36,7 +36,7 @@
         top: 460px;
     }
 
-    .carouselNewsContainerUpper {
+    .carousel-news-container-upper {
         display: flex;
         justify-content: center;
         margin-bottom: 10%;
