--- a/src/css/news/main.css
+++ b/src/css/news/main.css
@@ -7,7 +7,7 @@
     font-family: Montserrat;
 }
 
-.headNews {
+.head-news {
     background: radial-gradient(100% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(90deg, #05B86E 0%, #2CAAA4 48.75%, #026785 100%);
     border-radius: 20px;
     color: white;
@@ -17,17 +17,38 @@
     margin-bottom: 5%;
 }
 
-.headNews h1 {
+.head-news h1 {
     margin-top: 2%;
     margin-bottom: 2%;
 }
 
-.textNews {
+.img-gradient {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    border-radius: 10px;
+}
+
+.img-gradient:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: transparent;
+    background: linear-gradient(180deg, rgba(56, 196, 189, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
+    transform: rotate(-180deg);
+    opacity: 0.8;
+}
+
+.text-news {
     margin-top: 5%;
     margin-bottom: 5%;
 }
 
-.textNews h1 {
+.text-news h1 {
     margin-bottom: 3%;
 }
 
