--- a/src/css/personalAccount/main.css
+++ b/src/css/personalAccount/main.css
@@ -7,7 +7,7 @@
     font-family: Montserrat;
 }
 
-.personalAccountBody {
+.personal-account-body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -39,7 +39,7 @@
     font-weight: 500;
 }
 
-.contentPersonalAccount {
+.content-personal-account {
     background: #FFFFFF;
     box-shadow: 0px 0px 40px #F0F0F0;
     border-radius: 10px;
