--- a/src/css/userCoursePage/main.css
+++ b/src/css/userCoursePage/main.css
@@ -32,10 +32,10 @@
     font-size: 16px;
 }
 
-.text-info {
+.course-text-info {
     margin-bottom: 5%;
 }
 
-.text-info h1 {
+.course-text-info h1 {
     font-weight: bolder;
 }
