--- a/src/css/courses/users.css
+++ b/src/css/courses/users.css
@@ -12,11 +12,11 @@
     font-size: 16px;
 }
 
-.text-info {
+.course-text-info {
     margin-bottom: 5%;
 }
 
-.text-info h1 {
+.course-text-info h1 {
     font-weight: bolder;
 }
 
