--- a/src/css/personalAccount/main.css
+++ b/src/css/personalAccount/main.css
@@ -3,6 +3,11 @@
     src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
 }
 
+@font-face {
+    font-family: "Montserrat-SemiBold";
+    src: url('../../../fonts/fonts/Montserrat-SemiBold.ttf');
+}
+
 * {
     font-family: Montserrat;
 }
