responsive reccomend courses

--- a/src/css/signIn/main.css
+++ b/src/css/signIn/main.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
+}
+
+@font-face {
+    font-family: "Montserrat-Bold";
+    src: url('../../../fonts/fonts/Montserrat-Bold.ttf');
+}
+
+* {
+    font-family: Montserrat;
+}
+
 .signin-block {
     display: flex;
     flex-direction: row;
