--- a/src/css/userCourse/main.css
+++ b/src/css/userCourse/main.css
@@ -1,3 +1,30 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
+}
+
+@font-face {
+    font-family: "Montserrat-Bold";
+    src: url('../../../fonts/fonts/Montserrat-Bold.ttf');
+}
+
+@font-face {
+    font-family: "Montserrat-SemiBold";
+    src: url('../../../fonts/fonts/Montserrat-SemiBold.ttf');
+}
+
+* {
+    font-family: Montserrat;
+}
+
+.recomend-course-header {
+    font-family: Montserrat-Bold
+}
+
+.description-course h1 {
+    font-family: Montserrat-SemiBold;
+}
+
 .course-faces {
     display: flex;
     flex-direction: column;
@@ -12,16 +39,71 @@
     background: #F4F4F4;
     border-radius: 20px;
     justify-content: space-between;
-    padding-top: 5%;
-    padding-left: 3%;
-    padding-right: 3%;
+    padding: 5% 3% 5%;
     height: 100%;
     margin-bottom:  5%;
 }
 
+.description-course {
+    width: 60%;
+}
+
 .text-course {
     font-size: 20px;
-    width: 70%;
-    margin-top: 60px;
-    margin-bottom: 60px;
+
+    margin-top: 7%;
+    margin-bottom: 7%;
+}
+
+@media (max-width: 1199px) {
+
+    .description-course h1 {
+        font-size: 2rem;
+    }
+
+    .text-course {
+        font-size: 0.9rem;
+
+    }
+
+    .description-course {
+        width: 50%;
+    }
+
+    .img-computer {
+        width: 40%;
+    }
+
+}
+
+@media (min-width: 768px) {
+    .img-mobile {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) {
+    .img-computer {
+        display: none;
+    }
+
+    .description-course {
+        width: 100%;
+    }
+
+    .img-mobile {
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
+
+    .course-face {
+        padding: 8%;
+        width: 100%;
+    }
+}
+
+@media (max-width: 330px) {
+    .course-face button {
+        width: 100%;
+    }
 }
