--- a/src/css/Student/Courses/Lessons/main.css
+++ b/src/css/Student/Courses/Lessons/main.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: "Montserrat";
-    src: url('../../../fonts/fonts/Montserrat-Regular.ttf');
+    src: url('../../../../../fonts/fonts/Montserrat-Regular.ttf');
 }
 
 @font-face {
     font-family: "Montserrat-SemiBold";
-    src: url('../../../fonts/fonts/Montserrat-SemiBold.ttf');
+    src: url('../../../../../fonts/fonts/Montserrat-SemiBold.ttf');
 }
 
 * {
