--- a/src/css/Student/PersonalAccount/main.css
+++ b/src/css/Student/PersonalAccount/main.css
@@ -50,3 +50,15 @@
     border-radius: 10px;
     padding: 5% 5% 5% 10%;
 }
+
+@media (max-width: 767px) {
+    .personal-account-body {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .list-group {
+        width: 100%;
+    }
+}
