--- a/src/css/Teacher/PersonalAccount/Courses/content.css
+++ b/src/css/Teacher/PersonalAccount/Courses/content.css
@@ -1,6 +1,6 @@
 .description-course h1 {
     font-family: Montserrat-SemiBold;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .course-face {
@@ -20,8 +20,7 @@
 }
 
 .text-course {
-    font-size: 20px;
-
+    font-size: 0.9rem;
     margin-top: 7%;
     margin-bottom: 7%;
 }
@@ -32,4 +31,101 @@
 
 .carousel-control-next {
     right: -10%;
+}
+
+.img-computer {
+    width: 40%;
+}
+
+@media (max-width: 991px) and (min-width: 768px) {
+    .green-button {
+        width: 130px;
+        height: 45px;
+        font-size: 0.8rem;
+    }
+
+    .text-course {
+        font-size: 0.7rem;
+    }
+
+    .description-course h1 {
+        font-size: 1.2rem;
+    }
+
+    .img-computer {
+        width: 50%;
+    }
+}
+
+@media (min-width: 768px) {
+    .content-personal-account {
+        width: 75%;
+    }
+    .img-mobile {
+        display: none;
+    }
+
+    .carousel-indicators {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .content-personal-account {
+        padding-bottom: 10%;
+    }
+
+    .img-computer {
+        display: none;
+    }
+
+    .description-course {
+        width: 100%;
+    }
+
+    .img-mobile {
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
+
+    .course-face {
+        padding: 8%;
+        width: 100%;
+    }
+
+    .carousel-control-next, .carousel-control-prev {
+        display: none;
+    }
+
+    .carousel-indicators {
+        top: 100%;
+    }
+
+    .carousel-indicators [data-bs-target] {
+        opacity: inherit;
+    }
+
+    .carousel .carousel-indicators  button {
+        width: 13px !important;
+        height: 13px !important;
+        border-radius: 50%;
+        border: 1px solid #000000 !important;
+        background-color: white !important;
+
+    }
+
+    .carousel-indicators button.active {
+        background-color: #898989 !important;
+        border: none !important;
+        width: 15px !important;
+        height: 15px !important;
+    }
+
+}
+
+@media (max-width: 380px) {
+    .green-button {
+        width: 100%;
+    }
 }
