--- a/src/css/Teacher/PersonalAccount/Settings/content.css
+++ b/src/css/Teacher/PersonalAccount/Settings/content.css
@@ -1,5 +1,10 @@
 @media (min-width: 768px) {
-    .content-personal-account {
+    .content-personal-account,
+    .teacher-settings-input {
         width: 75%;
     }
+}
+
+textarea {
+    height: 400px;
 }
